--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Obě strany eliminují přes 99% tarifních linek a pro zbývající budou stano
   <small>
     <span class="pull-left">© TBH Investment</span>
     <div class="pull-right">
-      <div><a href="mailto:info(zavinač)tbhinvestment.eu">tbh(zavinač)tbhinvestment.eu</a></div>
+      <div><a href="mailto:info(zavinač)tbhinvestment.eu">tbh@tbhinvestment.eu</a></div>
     </div>
   </small>
  </div>
