--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
   <small>
     <span class="pull-left">© TBH Investment</span>
     <div class="pull-right">
-      <div><a href="mailto:tbh@tbhinvestment.eu">tbh(zavinač)tbhinvestment.eu</a></div>
+      <div><a href="mailto:tbh@tbhinvestment.eu">tbh@tbhinvestment.eu</a></div>
     </div>
   </small>
  </div>
